--- a/SearchWorkWPF/MainWindow.xaml
+++ b/SearchWorkWPF/MainWindow.xaml
@@ -72,9 +72,6 @@
             <Button  Name="btnGetInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnGetInfoJob_Click" HorizontalAlignment="Left" Width="117" Height="26" VerticalAlignment="Bottom">Получить вакансии</Button>
         </StackPanel>
         <ProgressBar Name="pb_loadJob" HorizontalAlignment="Left" Height="17" Margin="157,54,0,0" Grid.Row="2" VerticalAlignment="Top" Width="409"/>
-        <TextBlock x:Name="tb_loadJob" HorizontalAlignment="Left" Margin="268,54,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="tb_loadJob" Margin="157,55,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="409" TextAlignment="Center"/>
     </Grid>
-
-
-
 </Window>
