--- a/AvorionGoodsParser/MainWindow.xaml
+++ b/AvorionGoodsParser/MainWindow.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="button" Content="Load" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="113,17,0,0" VerticalAlignment="Top" Width="120"/>
+        <StackPanel Orientation="Vertical">
+            <TextBlock x:Name="textBlockName" Text="Name:"  HorizontalAlignment="Left" Margin="10,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="textBlockVolume" Text="Volume:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="textBlockPrice" Text="Avg. Price:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="textBlockSold" Text="Sold By:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="textBlockBought" Text="Bought By:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="textBlockIllegal" Text="Illegal:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="textBlockDangerous" Text="Dangerous:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+        </StackPanel>
     </Grid>
 </Window>
