--- a/AvorionGoodsParser/MainWindow.xaml
+++ b/AvorionGoodsParser/MainWindow.xaml
@@ -7,16 +7,51 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+        </Grid.RowDefinitions>
         <Button x:Name="button" Content="Load" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="113,17,0,0" VerticalAlignment="Top" Width="120"/>
-        <StackPanel Orientation="Vertical">
-            <TextBlock x:Name="textBlockName" Text="Name:"  HorizontalAlignment="Left" Margin="10,50,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-            <TextBlock x:Name="textBlockVolume" Text="Volume:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-            <TextBlock x:Name="textBlockPrice" Text="Avg. Price:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-            <TextBlock x:Name="textBlockSold" Text="Sold By:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-            <TextBlock x:Name="textBlockBought" Text="Bought By:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-            <TextBlock x:Name="textBlockIllegal" Text="Illegal:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-            <TextBlock x:Name="textBlockDangerous" Text="Dangerous:" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-        </StackPanel>
+        <ComboBox x:Name="comboBoxGoods" HorizontalAlignment="Left" Margin="113,17,0,0" VerticalAlignment="Top" Width="120" IsEditable="True"/>
+        <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" ResizeBehavior="PreviousAndNext" Height="5"/>
+        <Grid Name="gridCarDetails" DataContext="{Binding ElementName=comboBoxGoods, Path=SelectedItem}" Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=Name}" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+
+            <TextBlock x:Name="textBlockVolume" Text="Volume:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=Volume}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+            <TextBlock x:Name="textBlockPrice" Text="Avg. Price:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=Price}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+            <TextBlock x:Name="textBlockSold" Text="Sold By:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=SoldBy}" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+            <TextBlock x:Name="textBlockBought" Text="Bought By:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=BoughtBy}" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+            <TextBlock x:Name="textBlockIllegal" Text="Illegal:" Grid.Column="0" Grid.Row="5" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=isIllegal}" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+            <TextBlock x:Name="textBlockDangerous" Text="Dangerous:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding Path=isDangerous}" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+
+        </Grid>
     </Grid>
 </Window>
