--- a/ExtensionStore/MainWindow.xaml
+++ b/ExtensionStore/MainWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="254,153,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="62,39,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="129" Margin="185,39,0,0" VerticalAlignment="Top" Width="295"/>
 
     </Grid>
 </Window>
