--- a/ExtensionStore/MainWindow.xaml
+++ b/ExtensionStore/MainWindow.xaml
@@ -9,6 +9,12 @@
     <Grid>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="62,39,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
         <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="129" Margin="185,39,0,0" VerticalAlignment="Top" Width="295"/>
+        <ProgressBar x:Name="pb_genLinks" HorizontalAlignment="Left" Height="12" Margin="62,212,0,0" VerticalAlignment="Top" Width="321" FontSize="14"/>
+        <ProgressBar x:Name="pb_allLinks" HorizontalAlignment="Left" Height="12" Margin="62,249,0,0" VerticalAlignment="Top" Width="321" FontSize="14"/>
+        <ProgressBar x:Name="pb_allExtension" HorizontalAlignment="Left" Height="12" Margin="62,285,0,0" VerticalAlignment="Top" Width="321" FontSize="14"/>
+        <TextBlock x:Name="tb_genLinks" HorizontalAlignment="Left" Margin="62,188,0,0" TextWrapping="Wrap" Text="Общие ссылки" VerticalAlignment="Top" FontSize="14"/>
+        <TextBlock x:Name="tb_allLinks" HorizontalAlignment="Left" Margin="62,230,0,0" TextWrapping="Wrap" Text="Ссылки на формат" VerticalAlignment="Top" FontSize="14"/>
+        <TextBlock x:Name="tb_allExtension" HorizontalAlignment="Left" Margin="62,266,0,0" TextWrapping="Wrap" Text="Форматов" VerticalAlignment="Top" FontSize="14"/>
 
     </Grid>
 </Window>
