--- a/SearchWorkWPF/MainWindow.xaml
+++ b/SearchWorkWPF/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SearchWorkWPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="602">
+
     <Grid ScrollViewer.VerticalScrollBarVisibility="Auto">
 
         <Grid.RowDefinitions>
@@ -71,7 +72,11 @@
 
             <Button  Name="btnGetInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnGetInfoJob_Click" HorizontalAlignment="Left" Width="117" Height="26" VerticalAlignment="Bottom">Получить вакансии</Button>
         </StackPanel>
-        <ProgressBar Name="pb_loadJob" HorizontalAlignment="Left" Height="17" Margin="157,54,0,0" Grid.Row="2" VerticalAlignment="Top" Width="409"/>
+        <ProgressBar Name="pb_loadJob" HorizontalAlignment="Left" Height="17" Margin="157,54,0,0" Grid.Row="2" VerticalAlignment="Top" Width="409" Maximum="1" LargeChange="0.1"/>
         <TextBlock x:Name="tb_loadJob" Margin="157,55,0,0" Grid.Row="2" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="409" TextAlignment="Center"/>
     </Grid>
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo x:Name="taskBarItem" ProgressState="Normal"  ProgressValue="{Binding ElementName=pb_loadJob, Path=Value}">
+        </TaskbarItemInfo>        
+    </Window.TaskbarItemInfo>
 </Window>
