--- a/AvorionGoodsParser/MainWindow.xaml
+++ b/AvorionGoodsParser/MainWindow.xaml
@@ -13,12 +13,18 @@
                 <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
             <Button x:Name="button" Content="Load" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
             <ComboBox x:Name="comboBoxGoods" HorizontalAlignment="Left" Margin="113,17,0,0" VerticalAlignment="Top" Width="120" IsEditable="True"/>
-            <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" ResizeBehavior="PreviousAndNext" Height="5"/>
-            <Grid Name="gridCarDetails" DataContext="{Binding ElementName=comboBoxGoods, Path=SelectedItem}" Grid.Row="2" MinWidth="200" MinHeight="50" >
+            <GridSplitter Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" ResizeBehavior="PreviousAndNext" Height="5"/>
+            <GridSplitter Grid.Row="2" Grid.Column="1" Grid.RowSpan="7" HorizontalAlignment="Center" ResizeBehavior="PreviousAndNext" Width="5" MinWidth="5"/>
+            <Grid Name="gridGoodsDetails" Grid.Column="0" DataContext="{Binding ElementName=comboBoxGoods, Path=SelectedItem}" Grid.Row="2" MinWidth="200" MinHeight="50" >
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>                    
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -40,24 +46,48 @@
 
                 <TextBlock x:Name="textBlockPrice" Text="Avg. Price:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
                 <TextBlock Text="{Binding Path=Price}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-
-                <TextBlock Text="Sold By:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-                <ListBox x:Name="listViewSold" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" Height="auto" VerticalAlignment="Top" Width="auto" MinHeight="50" MinWidth="200" />
-
-
-
-                <TextBlock Text="Bought By:" Grid.Column="0" Grid.Row="5" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-                <ListBox x:Name="listViewBought" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" Height="auto" VerticalAlignment="Top" Width="auto" MinWidth="200" MinHeight="50" />
-
-
+               
+                <TextBlock x:Name="textBlockDangerous" Text="Dangerous:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <TextBlock Text="{Binding Path=isDangerous}" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
 
                 <TextBlock x:Name="textBlockIllegal" Text="Illegal:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
                 <TextBlock Text="{Binding Path=isIllegal}" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
 
-                <TextBlock x:Name="textBlockDangerous" Text="Dangerous:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
-                <TextBlock Text="{Binding Path=isDangerous}" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <TextBlock Text="Bought By:" Grid.Column="0" Grid.Row="5" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <ListBox x:Name="listViewBought" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Left" Height="auto" VerticalAlignment="Top" Width="auto" MinWidth="200" MinHeight="50" />
+                
+                <TextBlock Text="Sold By:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <ListBox x:Name="listViewSold" Grid.Column="1" Grid.Row="6" HorizontalAlignment="Left" Height="auto" VerticalAlignment="Top" Width="auto" MinHeight="50" MinWidth="200" />
 
             </Grid>
+            <Grid Name="gridProfit" Grid.Column="2" DataContext="{Binding ElementName=comboBoxGoods, Path=SelectedItem}" Grid.Row="2" MinWidth="200" MinHeight="50" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+
+                <TextBlock  Text="купить ($):" Grid.Column="0" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <TextBox x:Name="tbx_bought" Text="" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" MinWidth="40"/>
+
+                <TextBlock Text="продать ($):" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <TextBox x:Name="tbx_sell" Text="" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" MinWidth="40"/>
+
+                <TextBlock Text="вклад ($):" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+                <TextBox x:Name="tbx_deposit" Text="" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" MinWidth="40"/>
+
+                <Button x:Name="button1" Content="Расчитать" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Margin="0,5" Click="button1_Click"/>
+                <TextBlock x:Name="tb_result" Text="" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top"/>
+            </Grid>
+
         </Grid>
     </ScrollViewer>
     
